Fixing bug 4815, library viewer needs a horizontal scrollbar. r=matt
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@9750 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/rubberducky/skin/colors.css
+++ b/feathers/rubberducky/skin/colors.css
@@ -638,6 +638,10 @@ tree
   border-right-color: #202220; /** Button Shadow */ 
 }
 
+.tree-scrollable-columns {
+  background-color: #313131;
+}
+
 treechildren::-moz-tree-row
 {
   border: 0px solid transparent !important;
@@ -713,6 +717,7 @@ listheader,
 tree treecol,
 .sb-displaypane-header
 {
+  min-width: 50px;
   background-color: #313131 !important;
   border-right: 1px solid #202220 !important; /** Button Shadow */
   border-top: 1px solid #474948; /** Rubber Highlight */
